--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,57 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
-    Arial, sans-serif;
-  margin: auto;
-  max-width: 38rem;
-  padding: 2rem;
+  font-family: Arial, sans-serif;
+  text-align: center;
+  margin: 0 auto;
+  max-width: 600px;
+  padding: 20px;
+}
+
+.formgrid {
+  border: 5px solid black;
+  padding: 50px;
+  margin-top: 50px;
+}
+
+h1 {
+  font-size: 2em;
+}
+
+button {
+  margin: 5px;
+  padding: 10px 20px;
+  font-size: 1em;
+}
+
+#closeBtn {
+  background-color: #ff5733;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+
+  margin-top: 50px;
+}
+
+input,
+button {
+  width: 100%;
+  margin-bottom: 10px;
+  padding: 10px;
+}
+
+#registerBTN,
+#loginBTN {
+  display: none; /* Initially hiding the buttons */
+}
+
+#changeToRegister,
+#changeToLogin {
+  background: none;
+  border: none;
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+p {
+  margin-top: 50px;
+  word-wrap: break-word;
 }
