--- a/src/index.css
+++ b/src/index.css
@@ -55,3 +55,43 @@ p {
   margin-top: 50px;
   word-wrap: break-word;
 }
+
+.topBar {
+  width: 100%;
+  height: 75px;
+
+  position: absolute;
+
+  left: 0;
+  top: 0;
+
+  background-color: rgb(173, 173, 173);
+
+  display: flex;
+
+  flex-direction: row;
+
+  align-items: center;
+}
+
+.topBarBtns {
+  width: 50px;
+  height: 50px;
+
+  margin-left: 25px;
+  margin-right: 25px;
+}
+
+.panels {
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  position: absolute;
+
+  width: 50%;
+  height: 50%;
+
+  border: 5px solid black;
+}
