--- a/src/index.css
+++ b/src/index.css
@@ -95,3 +95,42 @@ p {
 
   border: 5px solid black;
 }
+
+#userNameInput {
+  width: 75%;
+  padding: 8px;
+  margin-bottom: 8px;
+}
+#biographyInput {
+  width: 75%;
+  height: 25%;
+  padding: 8px;
+  margin-bottom: 8px;
+}
+
+#firstnameInput,
+#secondnameInput {
+  width: 22%;
+  padding: 8px;
+  margin-bottom: 8px;
+}
+
+#profileBack,
+#saveProfileBtn {
+  background-color: #007bff;
+  color: #fff;
+  padding: 8px 16px;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  margin-right: 8px;
+  width: 75%;
+}
+
+#saveProfileBtn {
+  width: 32px;
+  height: 32px;
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+}
