--- a/src/index.css
+++ b/src/index.css
@@ -2,14 +2,21 @@ body {
   font-family: Arial, sans-serif;
   text-align: center;
   margin: 0 auto;
-  max-width: 600px;
   padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  width: 100%;
+  height: 100%;
 }
 
 .formgrid {
   border: 5px solid black;
   padding: 50px;
   margin-top: 50px;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 h1 {
@@ -27,7 +34,6 @@ button {
   color: #fff;
   border: none;
   cursor: pointer;
-
   margin-top: 50px;
 }
 
@@ -36,6 +42,7 @@ button {
   width: 100%;
   margin-bottom: 10px;
   padding: 10px;
+  box-sizing: border-box;
 }
 
 #registerBTN,
@@ -59,80 +66,39 @@ p {
 .topBar {
   width: 100%;
   height: 75px;
-
-  position: absolute;
-
-  left: 0;
-  top: 0;
-
   background-color: rgb(173, 173, 173);
-
   display: flex;
-
-  flex-direction: row;
-
+  justify-content: space-around;
   align-items: center;
+  position: sticky;
+  top: 0;
+  z-index: 2;
 }
 
 .topBarBtns {
   width: 50px;
   height: 50px;
+}
 
-  margin-left: 25px;
-  margin-right: 25px;
+#mainPanel {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .panels {
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  position: absolute;
-
-  width: 50%;
-  height: 50%;
-
+  border-radius: 25px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  background-color: rgba(255, 255, 255, 1);
+  /* Example background color with opacity */
+  width: 100%;
+  box-sizing: border-box;
   border: 5px solid black;
-}
-
-#userNameInput {
-  width: 75%;
-  padding: 8px;
-  margin-bottom: 8px;
-}
-#biographyInput {
-  width: 75%;
-  height: 25%;
-  padding: 8px;
-  margin-bottom: 8px;
-}
-
-#firstnameInput,
-#secondnameInput {
-  width: 22%;
-  padding: 8px;
-  margin-bottom: 8px;
-}
-
-#profileBack,
-#saveProfileBtn {
-  background-color: #007bff;
-  color: #fff;
-  padding: 8px 16px;
-  border: none;
-  cursor: pointer;
-  font-size: 16px;
-  margin-right: 8px;
-  width: 75%;
-}
-
-#saveProfileBtn {
-  width: 32px;
-  height: 32px;
-  cursor: pointer;
-  border: none;
-  background-color: transparent;
+  margin-bottom: 20px;
 }
 
 #LiveChatHolder {
@@ -145,6 +111,16 @@ p {
   border: 5px solid violet;
 
   overflow: auto;
+
+  z-index: 5;
+}
+
+#LiveChat {
+  display: flex;
+  flex-direction: row;
+
+  width: 100%px;
+  height: 100px;
 }
 
 .myText {
@@ -189,16 +165,20 @@ p {
 .message {
   line-break: auto;
   word-wrap: break-word; /* Added to allow long words to wrap */
+  width: 100%;
 }
 
 #textInputPanel {
-  position: absolute;
-  left: 50%;
-  bottom: 10%;
+  width: 100%;
 }
 
 #searchPanel {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
+#searchedUserpanel {
+  display: flex;
   flex-direction: column;
 }
