--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,35 @@
 body {
-  font-family: Arial, sans-serif;
-  text-align: center;
-  margin: 0 auto;
-  padding: 20px;
+  margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  height: 100vh;
+}
 
+header {
+  background-color: #333;
+  color: white;
+  padding: 10px;
+  position: fixed;
   width: 100%;
-  height: 100%;
+  top: 0;
+  z-index: 1000; /* Ensures the header stays above other content */
+}
+
+main {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: auto;
+}
+
+#loginPanel {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 .formgrid {
@@ -80,34 +101,24 @@ p {
   height: 50px;
 }
 
-#mainPanel {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .panels {
   border-radius: 25px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   padding: 20px;
   background-color: rgba(255, 255, 255, 1);
-  /* Example background color with opacity */
   width: 100%;
   box-sizing: border-box;
   border: 5px solid black;
-  margin-bottom: 20px;
+
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 #LiveChatHolder {
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 75%;
-  height: 65%;
+  width: 60vw;
+  height: 35vw;
   border: 5px solid violet;
 
   overflow: auto;
@@ -117,10 +128,7 @@ p {
 
 #LiveChat {
   display: flex;
-  flex-direction: row;
-
-  width: 100%px;
-  height: 100px;
+  flex-wrap: wrap;
 }
 
 .myText {
@@ -169,7 +177,13 @@ p {
 }
 
 #textInputPanel {
-  width: 100%;
+  width: 60vw;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0;
 }
 
 #searchPanel {
@@ -181,4 +195,13 @@ p {
 #searchedUserpanel {
   display: flex;
   flex-direction: column;
+}
+
+#sendMessage {
+  width: 20%;
+  margin-left: 80%;
+}
+
+#messageInput {
+  height: 70%;
 }
